--- a/portal-frontend/src/app/features/home/inbox/inbox-list/inbox-list.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox-list/inbox-list.component.html
@@ -28,6 +28,6 @@
 </div>
 
 <div class="no-data" *ngIf="totalCount === 0">
-  <div><b>No applications found.</b></div>
+  <div><b>No {{type}} Found</b></div>
   <div>Please adjust search criteria and try again.</div>
 </div>
