--- a/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
+++ b/portal-frontend/src/app/features/home/inbox/inbox-table/inbox-table.component.html
@@ -6,7 +6,7 @@
 
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
-        <td class="no-data" colspan="7">No {{ type }} Created</td>
+        <td class="no-data" colspan="7">No {{ type }} Found</td>
       </tr>
 
       <ng-container matColumnDef="fileNumber">
