--- a/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/edit-reconsideration-dialog/edit-reconsideration-dialog.component.html
@@ -18,13 +18,6 @@
         <mat-datepicker #datePicker type="date"> </mat-datepicker>
       </mat-form-field>
 
-      <mat-form-field appearance="outline">
-        <mat-label>Decisions to be Reconsidered</mat-label>
-        <mat-select formControlName="reconsidersDecisions" multiple>
-          <mat-option *ngFor="let decision of decisions" [value]="decision.uuid">{{ decision.resolution }}</mat-option>
-        </mat-select>
-      </mat-form-field>
-
       <div class="toggle-group">
         <mat-label class="toggle-label">Reconsideration Type *</mat-label>
         <mat-button-toggle-group
@@ -36,6 +29,13 @@
           <mat-button-toggle *ngFor="let type of codes" value="{{ type.code }}">{{ type.label }}</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
+
+      <mat-form-field appearance="outline">
+        <mat-label>Resolutions to be Reconsidered*</mat-label>
+        <mat-select formControlName="reconsidersDecisions" multiple>
+          <mat-option *ngFor="let decision of decisions" [value]="decision.uuid">{{ decision.resolution }}</mat-option>
+        </mat-select>
+      </mat-form-field>
 
       <div>
         <mat-label>New Evidence*</mat-label>
@@ -61,16 +61,45 @@
         </mat-button-toggle-group>
       </div>
 
+      <mat-form-field appearance="outline" class="full-grid-line">
+        <mat-label>Request Description</mat-label>
+        <input matInput id="description" formControlName="description" type="text" />
+      </mat-form-field>
+
       <div *ngIf="typeControl.value === '33'" class="full-grid-line toggle-group">
         <mat-label class="toggle-label">Review Outcome <span>*</span></mat-label>
-        <mat-button-toggle-group id="reviewOutcomeCode" formControlName="reviewOutcomeCode" name="reviewOutcomeCode">
+        <mat-button-toggle-group
+          (change)="onChangeReviewOutcome()"
+          id="reviewOutcomeCode"
+          formControlName="reviewOutcomeCode"
+          name="reviewOutcomeCode"
+        >
           <mat-button-toggle value="PEN">Pending</mat-button-toggle>
           <mat-button-toggle value="PRC">Proceed to Reconsider</mat-button-toggle>
           <mat-button-toggle value="REF">Refuse to Reconsider</mat-button-toggle>
         </mat-button-toggle-group>
       </div>
 
-      <mat-form-field *ngIf="typeControl.value === '33'" appearance="outline" class="date-picker full-grid-line">
+      <div *ngIf="reviewOutcomeCodeControl.value === 'PRC'" class="full-grid-line toggle-group">
+        <mat-label class="toggle-label"
+          >Does the reconsideration confirm, reverse, or vary the previous decision?*<span>*</span></mat-label
+        >
+        <mat-button-toggle-group
+          id="decisionOutcomeCode"
+          formControlName="decisionOutcomeCode"
+          name="decisionOutcomeCode"
+        >
+          <mat-button-toggle value="CONF">Confirm</mat-button-toggle>
+          <mat-button-toggle value="REVE">Reverse</mat-button-toggle>
+          <mat-button-toggle value="VARY">Vary</mat-button-toggle>
+        </mat-button-toggle-group>
+      </div>
+
+      <mat-form-field
+        *ngIf="typeControl.value === '33' && reviewOutcomeCodeControl.value === 'REF'"
+        appearance="outline"
+        class="date-picker full-grid-line"
+      >
         <mat-label>
           Outcome Notification Date
           <mat-icon matTooltip="The date that the applicant/affected party is notified of the review outcome">
@@ -86,11 +115,6 @@
         />
         <mat-datepicker-toggle matSuffix [for]="reviewDatePicker"></mat-datepicker-toggle>
         <mat-datepicker #reviewDatePicker type="date"> </mat-datepicker>
-      </mat-form-field>
-
-      <mat-form-field appearance="outline" class="full-grid-line">
-        <mat-label>Request Description</mat-label>
-        <input matInput id="description" formControlName="description" type="text" />
       </mat-form-field>
     </div>
   </mat-dialog-content>
