--- a/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
+++ b/alcs-frontend/src/app/features/application/post-decision/post-decision.component.html
@@ -148,6 +148,14 @@
         {{ modification.isTimeExtension ? 'Time Extension' : 'Other' }}
       </div>
       <div>
+        <div class="subheading2">Resolutions to be Modified</div>
+        <ng-container> {{ modification.modifiesDecisionsNumbers.join(', ') }} </ng-container>
+      </div>
+      <div class="full-grid-line">
+        <div class="subheading2">Request Description</div>
+        <ng-container> {{ modification.description }} </ng-container>
+      </div>
+      <div>
         <div class="subheading2">Review Outcome</div>
         <span *ngIf="modification.reviewOutcome.code === 'PEN'">
           <app-inline-review-outcome
@@ -157,27 +165,9 @@
         </span>
         <span *ngIf="modification.reviewOutcome.code !== 'PEN'">{{ modification.reviewOutcome.label }}</span>
       </div>
-      <div>
-        <div class="subheading2">Resolutions to be Modified</div>
-        <ng-container> {{ modification.modifiesDecisionsNumbers.join(', ') }} </ng-container>
-      </div>
       <div *ngIf="modification.resultingDecision">
         <div class="subheading2">Resulting Resolution</div>
         #{{ modification.resultingDecision.resolutionNumber }}/{{ modification.resultingDecision.resolutionYear }}
-      </div>
-      <div>
-        <div class="subheading2 left">
-          Outcome Notification Date
-          <mat-icon matTooltip="The date that the applicant/affected party is notified of the review outcome">
-            info
-          </mat-icon>
-        </div>
-        <span *ngIf="modification.reviewDate">{{ modification.reviewDate | momentFormat }}</span>
-        <span *ngIf="!modification.reviewDate">
-          <app-inline-datepicker
-            (save)="onSaveModificationReviewDate(modification.uuid, $event)"
-          ></app-inline-datepicker>
-        </span>
       </div>
     </div>
   </div>
