--- a/alcs-frontend/src/app/features/board/dialogs/app-modification/create/create-app-modification-dialog.html
+++ b/alcs-frontend/src/app/features/board/dialogs/app-modification/create/create-app-modification-dialog.html
@@ -62,7 +62,7 @@
           This field is required.
         </mat-error>
       </mat-form-field>
-      <div class="full-grid">
+      <div>
         <ng-select
           appearance="outline"
           class="card-type"
@@ -131,7 +131,7 @@
         </ng-select>
       </div>
       <mat-form-field appearance="outline">
-        <mat-label>Decisions to be Modified</mat-label>
+        <mat-label>Resolutions to be Modified</mat-label>
         <mat-select [formControl]="modifiesDecisions" multiple>
           <mat-option *ngFor="let decision of decisions" [value]="decision.uuid">{{decision.resolution}}</mat-option>
         </mat-select>
@@ -155,6 +155,31 @@
           />
           <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
           <mat-datepicker #datePicker type="date"></mat-datepicker>
+        </mat-form-field>
+      </div>
+      <div class="full-grid">
+        <mat-form-field class="date-picker" appearance="outline">
+          <mat-label>Request Description</mat-label>
+          <input
+            matInput
+            id="description"
+            formControlName="description"
+            type="text"
+            [class.valid]="
+            createForm.get('description')!.valid &&
+            (createForm.get('description')!.dirty || createForm.get('description')!.touched)
+          "
+            [class.invalid]="
+            createForm.get('description')!.invalid &&
+            (createForm.get('description')!.dirty || createForm.get('description')!.touched)
+          "
+          />
+          <mat-error
+            class="text-danger"
+            *ngIf="createForm.get('description')!.touched && createForm.get('description')!.hasError('description')"
+          >
+            This field is required.
+          </mat-error>
         </mat-form-field>
       </div>
     </div>
