--- a/alcs-frontend/src/app/features/board/dialogs/noi-modification/create/create-noi-modification-dialog.html
+++ b/alcs-frontend/src/app/features/board/dialogs/noi-modification/create/create-noi-modification-dialog.html
@@ -95,13 +95,13 @@
         </ng-select>
       </div>
       <mat-form-field appearance="outline">
-        <mat-label>Decisions to be Modified</mat-label>
+        <mat-label>Resolutions to be Modified</mat-label>
         <mat-select [formControl]="modifiesDecisions" multiple>
           <mat-option *ngFor="let decision of decisions" [value]="decision.uuid">{{decision.resolution}}</mat-option>
         </mat-select>
       </mat-form-field>
       <div>
-        <mat-form-field class="date-picker" appearance="outline">
+        <mat-form-field class="full-width" appearance="outline">
           <mat-label>Request Submitted to ALC</mat-label>
           <input
             matInput
@@ -112,6 +112,31 @@
           />
           <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
           <mat-datepicker #datePicker type="date"></mat-datepicker>
+        </mat-form-field>
+      </div>
+      <div class="full-grid">
+        <mat-form-field class="full-width" appearance="outline">
+          <mat-label>Request Description</mat-label>
+          <input
+            matInput
+            id="description"
+            formControlName="description"
+            type="text"
+            [class.valid]="
+            createForm.get('description')!.valid &&
+            (createForm.get('description')!.dirty || createForm.get('description')!.touched)
+          "
+            [class.invalid]="
+            createForm.get('description')!.invalid &&
+            (createForm.get('description')!.dirty || createForm.get('description')!.touched)
+          "
+          />
+          <mat-error
+            class="text-danger"
+            *ngIf="createForm.get('description')!.touched && createForm.get('description')!.hasError('description')"
+          >
+            This field is required.
+          </mat-error>
         </mat-form-field>
       </div>
     </div>
