--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/notice-of-intent-details.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/notice-of-intent-details.component.scss
@@ -76,13 +76,17 @@
 
   .adjacent-parcels {
     display: grid;
-    grid-template-columns: max-content max-content max-content;
     overflow-x: auto;
     grid-column-gap: rem(36);
     grid-row-gap: rem(12);
+    grid-template-columns: max-content max-content max-content;
 
     @media screen and (min-width: $tabletBreakpoint) {
-      grid-template-columns: 0.65fr 1fr 1fr;
+      grid-template-columns: 0.55fr 1fr 1fr;
+    }
+
+    @media screen and (min-width: $midBreakpoint) {
+      grid-template-columns: 1fr 1fr 2fr;
     }
 
     .full-width {
