--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/pfrs-details/pfrs-details.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/pfrs-details/pfrs-details.component.scss
@@ -1,7 +1,19 @@
 @use '../../../../../styles/functions' as *;
 
 .soil-table {
-  grid-template-columns: 0.625fr 1fr 1fr;
+  display: grid;
+  overflow-x: auto;
+  grid-column-gap: rem(36);
+  grid-row-gap: rem(12);
+  grid-template-columns: max-content max-content max-content;
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    grid-template-columns: 0.55fr 1fr 1fr;
+  }
+
+  @media screen and (min-width: $midBreakpoint) {
+    grid-template-columns: 0.95fr 1fr 2fr;
+  }
 
   .spacer-row {
     grid-column: 1/4;
