Update submission tables responsive view with error message

--- a/portal-frontend/src/app/features/applications/application-details/application-details.component.scss
+++ b/portal-frontend/src/app/features/applications/application-details/application-details.component.scss
@@ -67,6 +67,7 @@
 
     @media screen and (min-width: $tabletBreakpoint) {
       grid-template-columns: 1fr 1fr 1fr;
+      grid-column-gap: rem(16);
     }
 
     .full-width {
