--- a/portal-frontend/src/app/features/applications/application-details/pfrs-details/pfrs-details.component.scss
+++ b/portal-frontend/src/app/features/applications/application-details/pfrs-details/pfrs-details.component.scss
@@ -13,6 +13,7 @@
 
   @media screen and (min-width: $midBreakpoint) {
     grid-template-columns: 0.95fr 1fr 2fr;
+    grid-column-gap: rem(16);
   }
 
   .spacer-row {
