--- a/portal-frontend/src/app/features/applications/application-details/subd-details/subd-details.component.scss
+++ b/portal-frontend/src/app/features/applications/application-details/subd-details/subd-details.component.scss
@@ -6,4 +6,12 @@
   overflow-x: auto;
   grid-column-gap: rem(36);
   grid-row-gap: rem(12);
+
+  @media screen and (min-width: $tabletBreakpoint) {
+    grid-template-columns: 0.55fr 1fr 1fr;
+  }
+
+  @media screen and (min-width: $midBreakpoint) {
+    grid-template-columns: 1fr 1fr 2fr;
+  }
 }
