Update Portal Decisions
* Replace outcome -> description
* Update file listing to new UX
* Select last tab if app is in final status
* Map fileSize as it was not sent previously
* Repeat a bunch of times for each page

--- a/portal-frontend/src/app/features/applications/view-submission/alc-review/decisions/decisions.component.html
+++ b/portal-frontend/src/app/features/applications/view-submission/alc-review/decisions/decisions.component.html
@@ -11,15 +11,34 @@
       #{{ decision.resolutionNumber }}/{{ decision.resolutionYear }}
     </div>
 
-    <div>
-      <div class="subheading2">Decision Outcome</div>
-      {{ decision.outcome.label }} {{ decision.isSubjectToConditions ? '- Subject to Conditions' : '' }}
+    <div class="full-width">
+      <div class="subheading2">Decision Summary</div>
+      {{ decision.decisionDescription }}
     </div>
 
-    <div>
+    <div class="full-width">
       <div class="subheading2">Decision Document</div>
-      <div *ngFor="let document of decision.documents">
-        <a (click)="openFile(document.uuid)">{{ document.fileName }}</a>
+      <div class="document split" *ngFor="let document of decision.documents">
+        <div>
+          <a (click)="openFile(document.uuid)">{{ document.fileName }}</a>
+          &nbsp;({{ document.fileSize | filesize }})
+        </div>
+        <button class="center" mat-button (click)="openFile(document.uuid)">
+          <mat-icon>file_download</mat-icon>
+          Download
+        </button>
+      </div>
+      <div class="document responsive left" *ngFor="let document of decision.documents">
+        <div class="document-name">
+          <a (click)="openFile(document.uuid)">{{ document.fileName }}</a>
+        </div>
+        <div class="split">
+          <div>{{ document.fileSize | filesize }}</div>
+          <button class="center" mat-button (click)="openFile(document.uuid)">
+            <mat-icon>file_download</mat-icon>
+            Download
+          </button>
+        </div>
       </div>
     </div>
   </div>
