--- a/portal-frontend/src/app/features/applications/view-submission/view-application-submission.component.html
+++ b/portal-frontend/src/app/features/applications/view-submission/view-application-submission.component.html
@@ -31,7 +31,7 @@
 <button (click)="onNavigateHome()" mat-button color="accent"><mat-icon>chevron_left</mat-icon>Return to Inbox</button>
 <div>
   <div class="navigation">
-    <mat-tab-group>
+    <mat-tab-group [(selectedIndex)]="selectedIndex">
       <mat-tab label="Applicant Submission">
         <div *ngIf="application" class="content">
           <section>
