--- a/portal-frontend/src/app/features/public/notification/public-notification.component.html
+++ b/portal-frontend/src/app/features/public/notification/public-notification.component.html
@@ -34,7 +34,7 @@
 </button>
 <div>
   <div class="navigation">
-    <mat-tab-group>
+    <mat-tab-group [(selectedIndex)]="selectedIndex">
       <mat-tab label="Applicant Submission">
         <div *ngIf="submission" class="content">
           <section>
