Add requiresGovernmentReview flag to App Type
* Use this flag in front end and back end wherever appropriate compared to checking for TURP
* Update Tests

--- a/portal-frontend/src/app/features/applications/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/application-details.component.html
@@ -97,7 +97,10 @@
       </app-warning-banner>
       <app-warning-banner
         *ngIf="
-          showErrors && localGovernment && localGovernment.matchesUserGuid && applicationSubmission.typeCode !== 'TURP'
+          showErrors &&
+          localGovernment &&
+          localGovernment.matchesUserGuid &&
+          applicationSubmission.requiresGovernmentReview
         "
         class="full-row"
       >
