--- a/portal-frontend/src/app/features/public/search/search-list/search-list.component.html
+++ b/portal-frontend/src/app/features/public/search/search-list/search-list.component.html
@@ -21,6 +21,8 @@
 </div>
 
 <div class="no-data" *ngIf="totalCount === 0">
-  <div><b>No applications found.</b></div>
+  <div>
+    <b>No {{ type }} found.</b>
+  </div>
   <div>Please adjust search criteria and try again.</div>
 </div>
