--- a/portal-frontend/src/app/features/public/search/notice-of-intent-search-table/notice-of-intent-search-table.component.html
+++ b/portal-frontend/src/app/features/public/search/notice-of-intent-search-table/notice-of-intent-search-table.component.html
@@ -62,7 +62,7 @@
 
     <tr class="mat-row no-data" *matNoDataRow>
       <td class="text-center" colspan="6">
-        <div><b>No notice of intent found.</b></div>
+        <div><b>No notices of intent found.</b></div>
         <div>Please adjust search criteria and try again.</div>
       </td>
     </tr>
